--- a/config/changed-apps-build.json
+++ b/config/changed-apps-build.json
@@ -284,7 +284,8 @@
     },
     {
       "rootFolder": "third-party-app-directory",
-      "slackGroup": "<@U022GNYPJ1L>"
+      "slackGroup": "<@U022GNYPJ1L>",
+      "slackChannel": "C06JM7UUHE3"
     },
     {
       "rootFolder": "survivor-dependent-education-benefit",
