--- a/src/applications/manifest-catalog.json
+++ b/src/applications/manifest-catalog.json
@@ -1,7 +1,7 @@
 {
   "title": "VA.gov Applications Manifest Catalog",
   "description": "Catalog of all applications in src/applications with their manifest.json metadata for reference",
-  "totalApplications": 132,
+  "totalApplications": 133,
   "applications": [
     {
       "directoryPath": "src/applications/_mock-form",
@@ -253,7 +253,7 @@
       "directoryPath": "src/applications/edu-benefits/10297",
       "appName": "10297",
       "entryName": "10297-edu-benefits",
-      "rootUrl": "/education/apply-for-high-technology-veterans-education/application/10297"
+      "rootUrl": "/education/other-va-education-benefits/high-technology-program/apply-for-high-technology-program-form-22-10297"
     },
     {
       "directoryPath": "src/applications/edu-benefits/1919",
@@ -271,7 +271,7 @@
       "directoryPath": "src/applications/edu-benefits/8794",
       "appName": "Designation Of Certifying Official(S)",
       "entryName": "8794-edu-benefits",
-      "rootUrl": "/education/apply-for-education-benefits/application/8794"
+      "rootUrl": "/school-administrators/update-certifying-officials"
     },
     {
       "directoryPath": "src/applications/edu-benefits/feedback-tool",
@@ -448,12 +448,6 @@
       "rootUrl": "/my-health/secure-messages"
     },
     {
-      "directoryPath": "src/applications/mhv-secure-messaging/pilot",
-      "appName": "MHV Secure Messaging - OH Pilot",
-      "entryName": "mhv-secure-messaging-pilot",
-      "rootUrl": "/my-health/secure-messages-pilot"
-    },
-    {
       "directoryPath": "src/applications/mhv-supply-reordering",
       "appName": "Order medical supplies",
       "entryName": "mhv-supply-reordering",
@@ -476,6 +470,12 @@
       "appName": "New 28-1900 Veteran Readiness",
       "entryName": "new-28-1900-chapter-31",
       "rootUrl": "/temporary/apply-vre-form-28-1900"
+    },
+    {
+      "directoryPath": "src/applications/new-chapter-36-form",
+      "appName": "Personalized Career Planning and Guidance/Chapter 36 (VA Form 27-8832)",
+      "entryName": "new-chapter-36-form",
+      "rootUrl": "/temporary/apply-career-guidance-form-27-8832"
     },
     {
       "directoryPath": "src/applications/office-directory",
@@ -728,6 +728,12 @@
       "appName": "VA online services terms of use",
       "entryName": "terms-of-use",
       "rootUrl": "/terms-of-use"
+    },
+    {
+      "directoryPath": "src/applications/third-party-app-directory",
+      "appName": "Third Party App Directory",
+      "entryName": "third-party-app-directory",
+      "rootUrl": "/third-party-app-directory"
     },
     {
       "directoryPath": "src/applications/toe",
